include/slvs.h

typedef unsigned __int32 uint32_t;
typedef uint32_t Slvs_hParam;
typedef uint32_t Slvs_hEntity;
typedef uint32_t Slvs_hConstraint;
typedef uint32_t Slvs_hGroup;
typedef struct {
    Slvs_hEntity    h;
    Slvs_hGroup     group;

    int             type;

    Slvs_hEntity    wrkpl;
    Slvs_hEntity    point[4];
    Slvs_hEntity    normal;
    Slvs_hEntity    distance;

    Slvs_hParam     param[4];
} Slvs_Entity;
typedef struct {
    Slvs_hConstraint    h;
    Slvs_hGroup         group;

    int                 type;

    Slvs_hEntity        wrkpl;

    double              valA;
    Slvs_hEntity        ptA;
    Slvs_hEntity        ptB;
    Slvs_hEntity        entityA;
    Slvs_hEntity        entityB;
    Slvs_hEntity        entityC;
    Slvs_hEntity        entityD;

    int                 other;
    int                 other2;
} Slvs_Constraint;
/*
 * Multi-instance solver handles.
 *
 * Historically all sketch + system state (`Sketch SK`, `System SYS`, the
 * dragged-param set, the temporary mimalloc arena) lived in process-globals.
 * That's incompatible with running multiple independent solvers in one
 * process — the canonical pyactiongraphsim need is N `SolveSpaceEngine`
 * instances driving N independent simulation scenes, potentially on N
 * threads.
 *
 * `Slvs_Solver` is an opaque handle to a complete, independent solver
 * instance: its own sketch, its own system, its own dragged set, its own
 * scratch arena. Every `Slvs_*` data-mutating function takes a
 * `Slvs_Solver *` as its first argument — the API is fully explicit.
 *
 * Multi-thread: each solver is independent; running N solvers on N threads
 * has zero cross-talk. Single thread juggling two solvers: pass whichever
 * handle you mean on each call; the solver does not carry hidden state
 * between calls.
 *
 *   Slvs_Solver *a = Slvs_CreateSolver();
 *   Slvs_Solver *b = Slvs_CreateSolver();
 *   Slvs_Entity p_in_a = Slvs_AddPoint3D(a, 1, 0, 0, 0);
 *   Slvs_Entity p_in_b = Slvs_AddPoint3D(b, 1, 0, 0, 0);
 *   Slvs_SolveSketch(a, 1, NULL);
 *   Slvs_SolveSketch(b, 1, NULL);
 *   Slvs_DestroySolver(a);
 *   Slvs_DestroySolver(b);
 *
 * The four lifecycle functions below manage `Slvs_Solver *` handles.
 * `Slvs_SetCurrentSolver` / `Slvs_GetCurrentSolver` exist for testing and
 * for embedding scenarios where the caller wants to inspect/clear the
 * internal thread-local current pointer; normal callers do not need them.
 */
typedef struct Slvs_Solver Slvs_Solver;
DLL Slvs_Solver *Slvs_CreateSolver(void);
DLL void         Slvs_DestroySolver(Slvs_Solver *solver);
DLL Slvs_Entity Slvs_AddPoint2D(Slvs_Solver *solver, uint32_t grouph, double u, double v, Slvs_Entity workplane);
DLL Slvs_Entity Slvs_AddPoint3D(Slvs_Solver *solver, uint32_t grouph, double x, double y, double z);
DLL Slvs_Entity Slvs_AddNormal2D(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity workplane);
DLL Slvs_Entity Slvs_AddNormal3D(Slvs_Solver *solver, uint32_t grouph, double qw, double qx, double qy, double qz);
DLL Slvs_Entity Slvs_AddDistance(Slvs_Solver *solver, uint32_t grouph, double value, Slvs_Entity workplane);
DLL Slvs_Entity Slvs_AddLine2D(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity ptA, Slvs_Entity ptB, Slvs_Entity workplane);
DLL Slvs_Entity Slvs_AddLine3D(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity ptA, Slvs_Entity ptB);
DLL Slvs_Entity Slvs_AddCubic(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity ptA, Slvs_Entity ptB, Slvs_Entity ptC, Slvs_Entity ptD, Slvs_Entity workplane);
DLL Slvs_Entity Slvs_AddArc(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity normal, Slvs_Entity center, Slvs_Entity start, Slvs_Entity end, Slvs_Entity workplane);
DLL Slvs_Entity Slvs_AddCircle(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity normal, Slvs_Entity center, Slvs_Entity radius, Slvs_Entity workplane);
DLL Slvs_Entity Slvs_AddWorkplane(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity origin, Slvs_Entity nm);
DLL Slvs_Entity Slvs_AddBase2D(Slvs_Solver *solver, uint32_t grouph);
DLL Slvs_Constraint Slvs_AddConstraint(Slvs_Solver *solver, uint32_t grouph, int type, Slvs_Entity workplane, double val, Slvs_Entity ptA,
    Slvs_Entity ptB, Slvs_Entity entityA,
    Slvs_Entity entityB, Slvs_Entity entityC,
    Slvs_Entity entityD, int other, int other2);
DLL Slvs_Constraint Slvs_Coincident(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_Distance(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB, double value,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_Equal(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_EqualAngle(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB, Slvs_Entity entityC,
                                    Slvs_Entity entityD,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_EqualPointToLine(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB,
                                    Slvs_Entity entityC, Slvs_Entity entityD,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_Ratio(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB, double value,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_Symmetric(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB,
                                    Slvs_Entity entityC  ,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_SymmetricH(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity ptA, Slvs_Entity ptB,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_SymmetricV(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity ptA, Slvs_Entity ptB,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_Midpoint(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity ptA, Slvs_Entity ptB,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_Horizontal(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity workplane,
                                    Slvs_Entity entityB);
DLL Slvs_Constraint Slvs_Vertical(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity workplane,
                                    Slvs_Entity entityB);
DLL Slvs_Constraint Slvs_Diameter(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, double value);
DLL Slvs_Constraint Slvs_SameOrientation(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB);
DLL Slvs_Constraint Slvs_Angle(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB, double value,
                                    Slvs_Entity workplane,
                                    int inverse);
DLL Slvs_Constraint Slvs_Perpendicular(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB,
                                    Slvs_Entity workplane,
                                    int inverse);
DLL Slvs_Constraint Slvs_Parallel(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_Tangent(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_DistanceProj(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity ptA, Slvs_Entity ptB, double value);
DLL Slvs_Constraint Slvs_LengthDiff(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity entityA, Slvs_Entity entityB, double value,
                                    Slvs_Entity workplane);
DLL Slvs_Constraint Slvs_Dragged(Slvs_Solver *solver, uint32_t grouph, Slvs_Entity ptA, Slvs_Entity workplane);
DLL void Slvs_MarkDragged(Slvs_Solver *solver, Slvs_Entity ptA);