src/slvs/lib.pyx


class ConstraintType(IntEnum):
    """Symbol of the constraint types."""
    POINTS_COINCIDENT = _SLVS_C_POINTS_COINCIDENT
    PT_PT_DISTANCE = _SLVS_C_PT_PT_DISTANCE
    PT_PLANE_DISTANCE = _SLVS_C_PT_PLANE_DISTANCE
    PT_LINE_DISTANCE = _SLVS_C_PT_LINE_DISTANCE
    PT_FACE_DISTANCE = _SLVS_C_PT_FACE_DISTANCE
    PT_IN_PLANE = _SLVS_C_PT_IN_PLANE
    PT_ON_LINE = _SLVS_C_PT_ON_LINE
    PT_ON_FACE = _SLVS_C_PT_ON_FACE
    EQUAL_LENGTH_LINES = _SLVS_C_EQUAL_LENGTH_LINES
    LENGTH_RATIO = _SLVS_C_LENGTH_RATIO
    EQ_LEN_PT_LINE_D = _SLVS_C_EQ_LEN_PT_LINE_D
    EQ_PT_LN_DISTANCES = _SLVS_C_EQ_PT_LN_DISTANCES
    EQUAL_ANGLE = _SLVS_C_EQUAL_ANGLE
    EQUAL_LINE_ARC_LEN = _SLVS_C_EQUAL_LINE_ARC_LEN
    SYMMETRIC = _SLVS_C_SYMMETRIC
    SYMMETRIC_HORIZ = _SLVS_C_SYMMETRIC_HORIZ
    SYMMETRIC_VERT = _SLVS_C_SYMMETRIC_VERT
    SYMMETRIC_LINE = _SLVS_C_SYMMETRIC_LINE
    AT_MIDPOINT = _SLVS_C_AT_MIDPOINT
    HORIZONTAL = _SLVS_C_HORIZONTAL
    VERTICAL = _SLVS_C_VERTICAL
    DIAMETER = _SLVS_C_DIAMETER
    PT_ON_CIRCLE = _SLVS_C_PT_ON_CIRCLE
    SAME_ORIENTATION = _SLVS_C_SAME_ORIENTATION
    ANGLE = _SLVS_C_ANGLE
    PARALLEL = _SLVS_C_PARALLEL
    PERPENDICULAR = _SLVS_C_PERPENDICULAR
    ARC_LINE_TANGENT = _SLVS_C_ARC_LINE_TANGENT
    CUBIC_LINE_TANGENT = _SLVS_C_CUBIC_LINE_TANGENT
    EQUAL_RADIUS = _SLVS_C_EQUAL_RADIUS
    PROJ_PT_DISTANCE = _SLVS_C_PROJ_PT_DISTANCE
    WHERE_DRAGGED = _SLVS_C_WHERE_DRAGGED
    CURVE_CURVE_TANGENT = _SLVS_C_CURVE_CURVE_TANGENT
    LENGTH_DIFFERENCE = _SLVS_C_LENGTH_DIFFERENCE
    ARC_ARC_LEN_RATIO = _SLVS_C_ARC_ARC_LEN_RATIO
    ARC_LINE_LEN_RATIO = _SLVS_C_ARC_LINE_LEN_RATIO
    ARC_ARC_DIFFERENCE = _SLVS_C_ARC_ARC_DIFFERENCE
    ARC_LINE_DIFFERENCE = _SLVS_C_ARC_LINE_DIFFERENCE


class EntityType(IntEnum):
    POINT_IN_3D = _SLVS_E_POINT_IN_3D
    POINT_IN_2D = _SLVS_E_POINT_IN_2D
    NORMAL_IN_3D = _SLVS_E_NORMAL_IN_3D
    NORMAL_IN_2D = _SLVS_E_NORMAL_IN_2D
    DISTANCE = _SLVS_E_DISTANCE
    WORKPLANE = _SLVS_E_WORKPLANE
    LINE_SEGMENT = _SLVS_E_LINE_SEGMENT
    CUBIC = _SLVS_E_CUBIC
    CIRCLE = _SLVS_E_CIRCLE
    ARC_OF_CIRCLE = _SLVS_E_ARC_OF_CIRCLE


# `Solver` is the only sketch/solve API surface. Each instance owns one
# underlying `Slvs_Solver *` (independent sketch, system, dragged set,
# scratch arena). Multiple instances are fully independent — share none
# of solver state — and may be driven concurrently on different threads.
#
# Every method passes `self.handle` through to its `Slvs_*` C entry
# point, so the choice of which solver is mutated is explicit at every
# call site.
cdef class Solver:
    cdef Slvs_Solver *handle

    def __cinit__(self):
        self.handle = Slvs_CreateSolver()
        if self.handle is NULL:
            raise MemoryError("Slvs_CreateSolver failed")

    def __dealloc__(self):
        if self.handle is not NULL:
            Slvs_DestroySolver(self.handle)
            self.handle = NULL

    # ---------- entities ----------
    def add_point_2d(self, grouph: int, u: float, v: float, workplane: Slvs_Entity) -> Slvs_Entity:
        return Slvs_AddPoint2D(self.handle, grouph, u, v, workplane)

    def add_point_3d(self, grouph: int, x: float, y: float, z: float) -> Slvs_Entity:
        return Slvs_AddPoint3D(self.handle, grouph, x, y, z)

    def add_normal_2d(self, grouph: int, workplane: Slvs_Entity) -> Slvs_Entity:
        return Slvs_AddNormal2D(self.handle, grouph, workplane)

    def add_normal_3d(self, grouph: int, qw: float, qx: float, qy: float, qz: float) -> Slvs_Entity:
        return Slvs_AddNormal3D(self.handle, grouph, qw, qx, qy, qz)

    def add_distance(self, grouph: int, value: float, workplane: Slvs_Entity) -> Slvs_Entity:
        return Slvs_AddDistance(self.handle, grouph, value, workplane)

    def add_line_2d(self, grouph: int, ptA: Slvs_Entity, ptB: Slvs_Entity, workplane: Slvs_Entity) -> Slvs_Entity:
        return Slvs_AddLine2D(self.handle, grouph, ptA, ptB, workplane)

    def add_line_3d(self, grouph: int, ptA: Slvs_Entity, ptB: Slvs_Entity) -> Slvs_Entity:
        return Slvs_AddLine3D(self.handle, grouph, ptA, ptB)

    def add_cubic(self, grouph: int, ptA: Slvs_Entity, ptB: Slvs_Entity, ptC: Slvs_Entity, ptD: Slvs_Entity, workplane: Slvs_Entity) -> Slvs_Entity:
        return Slvs_AddCubic(self.handle, grouph, ptA, ptB, ptC, ptD, workplane)

    def add_arc(self, grouph: int, normal: Slvs_Entity, center: Slvs_Entity, start: Slvs_Entity, end: Slvs_Entity, workplane: Slvs_Entity) -> Slvs_Entity:
        return Slvs_AddArc(self.handle, grouph, normal, center, start, end, workplane)

    def add_circle(self, grouph: int, normal: Slvs_Entity, center: Slvs_Entity, radius: Slvs_Entity, workplane: Slvs_Entity) -> Slvs_Entity:
        return Slvs_AddCircle(self.handle, grouph, normal, center, radius, workplane)

    def add_workplane(self, grouph: int, origin: Slvs_Entity, nm: Slvs_Entity) -> Slvs_Entity:
        return Slvs_AddWorkplane(self.handle, grouph, origin, nm)

    def add_base_2d(self, grouph: int) -> Slvs_Entity:
        return Slvs_AddBase2D(self.handle, grouph)

    # ---------- constraints ----------
    def add_constraint(self, grouph: int, c_type, workplane: Slvs_Entity, val: float, ptA: Slvs_Entity = E_NONE,
            ptB: Slvs_Entity = E_NONE, entityA: Slvs_Entity = E_NONE,
            entityB: Slvs_Entity = E_NONE, entityC: Slvs_Entity = E_NONE,
            entityD: Slvs_Entity = E_NONE, other: int = 0, other2: int = 0) -> Slvs_Constraint:
        # `c_type` is intentionally untyped: callers commonly pass `ConstraintType`
        # (IntEnum), which Cython 3.2+ refuses to coerce to a typed `int` parameter
        # even though `IntEnum` is `int`-subclass. Coerce explicitly here.
        return Slvs_AddConstraint(self.handle, grouph, int(c_type), workplane, val, ptA, ptB, entityA, entityB, entityC, entityD, other, other2)

    def coincident(self, grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
        return Slvs_Coincident(self.handle, grouph, entityA, entityB, workplane)

    def distance(self, grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, value: float, workplane: Slvs_Entity) -> Slvs_Constraint:
        return Slvs_Distance(self.handle, grouph, entityA, entityB, value, workplane)

    def equal(self, grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
        return Slvs_Equal(self.handle, grouph, entityA, entityB, workplane)

    def equal_angle(self, grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, entityC: Slvs_Entity,
                                            entityD: Slvs_Entity,
                                            workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
        return Slvs_EqualAngle(self.handle, grouph, entityA, entityB, entityC, entityD, workplane)

    def equal_point_to_line(self, grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity,
                                            entityC: Slvs_Entity, entityD: Slvs_Entity,
                                            workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
        return Slvs_EqualPointToLine(self.handle, grouph, entityA, entityB, entityC, entityD, workplane)

    def ratio(self, grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, value: float, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
        return Slvs_Ratio(self.handle, grouph, entityA, entityB, value, workplane)

    def symmetric(self, grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, entityC: Slvs_Entity = E_NONE, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
        return Slvs_Symmetric(self.handle, grouph, entityA, entityB, entityC, workplane)

    def symmetric_h(self, grouph: int, ptA: Slvs_Entity, ptB: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
        return Slvs_SymmetricH(self.handle, grouph, ptA, ptB, workplane)

    def symmetric_v(self, grouph: int, ptA: Slvs_Entity, ptB: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
        return Slvs_SymmetricV(self.handle, grouph, ptA, ptB, workplane)

    def midpoint(self, grouph: int, ptA: Slvs_Entity, ptB: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
        return Slvs_Midpoint(self.handle, grouph, ptA, ptB, workplane)

    def horizontal(self, grouph: int, entityA: Slvs_Entity, workplane: Slvs_Entity, entityB: Slvs_Entity = E_NONE) -> Slvs_Constraint:
        return Slvs_Horizontal(self.handle, grouph, entityA, workplane, entityB)

    def vertical(self, grouph: int, entityA: Slvs_Entity, workplane: Slvs_Entity, entityB: Slvs_Entity = E_NONE) -> Slvs_Constraint:
        return Slvs_Vertical(self.handle, grouph, entityA, workplane, entityB)

    def diameter(self, grouph: int, entityA: Slvs_Entity, value: float) -> Slvs_Constraint:
        return Slvs_Diameter(self.handle, grouph, entityA, value)

    def same_orientation(self, grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity) -> Slvs_Constraint:
        return Slvs_SameOrientation(self.handle, grouph, entityA, entityB)

    def angle(self, grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, value: float, workplane: Slvs_Entity = E_FREE_IN_3D, inverse: bool = False) -> Slvs_Constraint:
        return Slvs_Angle(self.handle, grouph, entityA, entityB, value, workplane, inverse)

    def perpendicular(self, grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D, inverse: bool = False) -> Slvs_Constraint:
        return Slvs_Perpendicular(self.handle, grouph, entityA, entityB, workplane, inverse)

    def parallel(self, grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
        return Slvs_Parallel(self.handle, grouph, entityA, entityB, workplane)

    def tangent(self, grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
        return Slvs_Tangent(self.handle, grouph, entityA, entityB, workplane)

    def distance_proj(self, grouph: int, ptA: Slvs_Entity, ptB: Slvs_Entity, value: float) -> Slvs_Constraint:
        return Slvs_DistanceProj(self.handle, grouph, ptA, ptB, value)

    def length_diff(self, grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, value: float, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
        return Slvs_LengthDiff(self.handle, grouph, entityA, entityB, value, workplane)

    def dragged(self, grouph: int, ptA: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
        return Slvs_Dragged(self.handle, grouph, ptA, workplane)

    # ---------- params / constraint values / solving ----------
    def mark_dragged(self, ptA: Slvs_Entity):
        Slvs_MarkDragged(self.handle, ptA)
